--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!doctype html>
+<html>
+ <head>
+  <title>WEB GIS COVID-19</title>
+ </head>
+ <body>
+  <marquee width="1700" height="30"><b>DATA COVID - 19 TANGGERANG SELATAN</b></marquee><img src="images/tangsel.jpg" alt="tangsel" width="100" height="100">
+ </body>
+ </html> 
 <html lang="en">
     <head>
         <meta charset="utf-8">
